third_party/move/move-compiler-v2/tests/uninit-use-checker/else_assigns_if_doesnt_unfoldable.exp
============ bytecode before first stackless bytecode pipeline ================

[variant baseline]
fun <SELF>_0::main($t0: bool) {
     var $t1: u64
     var $t2: u64
     var $t3: u64
     var $t4: u64
     var $t5: u64
     var $t6: bool
     var $t7: u64
     var $t8: u64
     var $t9: u64
  0: if ($t0) goto 1 else goto 5
  1: label L0
  2: $t3 := 0
  3: $t2 := infer($t3)
  4: goto 9
  5: label L1
  6: $t4 := 42
  7: $t1 := infer($t4)
  8: $t5 := infer($t1)
  9: label L2
 10: $t7 := infer($t2)
 11: $t8 := 0
 12: $t6 := ==($t7, $t8)
 13: if ($t6) goto 14 else goto 16
 14: label L3
 15: goto 19
 16: label L4
 17: $t9 := 42
 18: abort($t9)
 19: label L5
 20: return ()
}


Diagnostics:
error: use of possibly unassigned local `y`
   ┌─ tests/uninit-use-checker/else_assigns_if_doesnt_unfoldable.move:11:13
   │
11 │     assert!(y == 0, 42);
   │             ^

============ after uninitialized_use_checker: ================

[variant baseline]
fun <SELF>_0::main($t0: bool) {
     var $t1: u64
     var $t2: u64
     var $t3: u64
     var $t4: u64
     var $t5: u64
     var $t6: bool
     var $t7: u64
     var $t8: u64
     var $t9: u64
     # before: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }
  0: if ($t0) goto 1 else goto 5
     # before: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }
  1: label L0
     # before: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t2, $t4, $t5, $t6, $t7, $t8, $t9 }
  2: $t3 := 0
     # before: { no: $t1, $t2, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t4, $t5, $t6, $t7, $t8, $t9 }
  3: $t2 := infer($t3)
     # before: { no: $t1, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t4, $t5, $t6, $t7, $t8, $t9 }
  4: goto 9
     # before: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }
  5: label L1
     # before: { no: $t1, $t2, $t3, $t4, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t1, $t2, $t3, $t5, $t6, $t7, $t8, $t9 }
  6: $t4 := 42
     # before: { no: $t1, $t2, $t3, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t2, $t3, $t5, $t6, $t7, $t8, $t9 }
  7: $t1 := infer($t4)
     # before: { no: $t2, $t3, $t5, $t6, $t7, $t8, $t9 }, after: { no: $t2, $t3, $t6, $t7, $t8, $t9 }
  8: $t5 := infer($t1)
     # before: { no: $t6, $t7, $t8, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t6, $t7, $t8, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
  9: label L2
     # before: { no: $t6, $t7, $t8, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t6, $t8, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 10: $t7 := infer($t2)
     # before: { no: $t6, $t8, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t6, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 11: $t8 := 0
     # before: { no: $t6, $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 12: $t6 := ==($t7, $t8)
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 13: if ($t6) goto 14 else goto 16
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 14: label L3
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 15: goto 19
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 16: label L4
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 17: $t9 := 42
     # before: { maybe: $t1, $t2, $t3, $t4, $t5 }, after: { maybe: $t1, $t2, $t3, $t4, $t5 }
 18: abort($t9)
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 19: label L5
     # before: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }, after: { no: $t9 }{ maybe: $t1, $t2, $t3, $t4, $t5 }
 20: return ()
}
