third_party/move/move-compiler-v2/tests/uninit-use-checker/else_assigns_if_doesnt_unfoldable.move
script {
fun main(p: bool) {
    let x;
    let y;
    if (p) {
        y = 0;
    } else {
        x = 42;
        x;
    };
    assert!(y == 0, 42);
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
